--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --config build/webpack.dev.config.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/stackjie/vam#readme",
   "devDependencies": {
+    "@types/vue": "^2.0.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
@@ -27,6 +28,7 @@
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.10",
+    "custom-tslint-formatters": "^2.3.0",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-friendly-formatter": "^3.0.0",
@@ -35,18 +37,22 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-typescript": "^0.10.0",
     "html-webpack-plugin": "^3.0.6",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
-    "ts-loader": "^4.0.1",
+    "ts-loader": "^4.1.0",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.7.0",
+    "tslint-eslint-rules": "^5.1.0",
     "tslint-loader": "^3.6.0",
     "typescript": "^2.7.2",
+    "typescript-eslint-parser": "^14.0.0",
+    "vue": "^2.5.16",
     "vue-loader": "^14.2.1",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.1.1",
+    "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1",
     "webpack-merge": "^4.1.2"
